--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <attr name="CardViewBackground" format="reference|color"/>
+    <declare-styleable name="CustomTextView">
+        <attr name="html_text" format="string" />
+        <attr name="text_int" format="integer" />
+    </declare-styleable>
 </resources>
